--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<body>
 		<div id="map"></div>
 		<script src="./node_modules/leaflet/dist/leaflet-src.js"></script>
-		<script type="module" src="./js/script.js"></script>
+		<script src="./js/leaflet-providers.js"></script>
+		<script type="module" src="./js/index.js"></script>
 	</body>
 </html>
