--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Vancouvers History Mapped</title>
-		<link rel="stylesheet" href="./node_modules/leaflet/dist/leaflet.css" />
+		<link rel="stylesheet" href="./styles/leaflet.css" />
 		<link rel="stylesheet" href="./styles/style.css" />
 	</head>
 	<body>
