--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Vancouvers History Mapped</title>
 		<link rel="stylesheet" href="./styles/leaflet.css" />
-		<link rel="stylesheet" href="./styles/style.css" />
+		<link rel="stylesheet" href="./styles/style.min.css" />
 	</head>
 	<body>
 		<div id="map"></div>
