--- a/index.html
+++ b/index.html
@@ -1,7 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<meta charset="UTF-8" />
+		<meta name="title" content="Vancouvers History Mapped" />
+		<meta
+			name="description"
+			content="Vancouvers History Mapped attempts to place photos from its past onto a map the the users current location. Check in periodically for updates. "
+		/>
+		<meta
+			name="keywords"
+			content="Vancouver, Washington, Clark County, South West Washington, Vancouver Washington, History, Photography"
+		/>
+		<meta name="robots" content="index, follow" />
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+		<meta name="language" content="English" />
+		<meta name="revisit-after" content="14 days" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Vancouvers History Mapped</title>
 		<link rel="stylesheet" href="./styles/leaflet.css" />
