--- a/index.html
+++ b/index.html
@@ -21,6 +21,23 @@
 	</head>
 	<body>
 		<div id="map"></div>
+		<div class="modal" data-modal>
+			<div class="modal__header">
+				<div class="container">
+					<div class="row"></div>
+				</div>
+			</div>
+			<div class="modal__body">
+				<div class="container">
+					<div class="row"></div>
+				</div>
+			</div>
+			<div class="modal__footer">
+				<div class="container">
+					<div class="row"></div>
+				</div>
+			</div>
+		</div>
 		<script src="./js/leaflet-src.js"></script>
 		<script src="./js/leaflet-providers.js"></script>
 		<script type="module" src="./js/index.js"></script>
