Set button header and footer title

--- a/index.html
+++ b/index.html
@@ -21,20 +21,28 @@
 	</head>
 	<body>
 		<div id="map"></div>
-		<div class="modal" data-modal>
+		<div class="modal animate__animated" data-modal>
 			<div class="modal__header">
-				<div class="container">
-					<div class="row"></div>
+				<div class="container container--padding">
+					<div class="row">
+						<div class="col-xs-12">
+							<h2>Title</h2>
+						</div>
+					</div>
 				</div>
 			</div>
 			<div class="modal__body">
-				<div class="container">
+				<div class="container container--padding">
 					<div class="row"></div>
 				</div>
 			</div>
 			<div class="modal__footer">
-				<div class="container">
-					<div class="row"></div>
+				<div class="container container--padding">
+					<div class="row">
+						<div class="col-xs-12 end-xs">
+							<button data-btn="modal-close">Close</button>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
