--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
 			</div>
 			<div class="modal__body">
 				<div class="container container--padding">
-					<div class="row"></div>
+					<div class="row">
+						<div class="col-xs-12 modal__scroll" data-scroll></div>
+					</div>
 				</div>
 			</div>
 			<div class="modal__footer">
