un use animate.css

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	</head>
 	<body>
 		<div id="map"></div>
-		<div class="modal animate__animated" data-modal>
+		<div class="modal" data-modal>
 			<div class="modal__header">
 				<div class="container container--padding">
 					<div class="row">
