--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 				<div class="container container--padding">
 					<div class="row">
 						<div class="col-xs-12">
-							<h2 data-header="modal-title">Title</h2>
+							<h4 data-header="modal-title"></h4>
 						</div>
 					</div>
 				</div>
