--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<link rel="stylesheet" href="./styles/style.min.css" />
 	</head>
 	<body>
-		<div id="map"></div>
+		<div id="map" data-map></div>
 		<div class="modal" data-modal>
 			<div class="modal__header">
 				<div class="container container--padding">
