--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<meta name="title" content="Vancouvers History Mapped" />
+		<meta name="title" content="Vancouver's History Mapped" />
 		<meta
 			name="description"
-			content="Vancouvers History Mapped attempts to place photos from its past onto a map the the users current location. Check in periodically for updates. "
+			content="Open source project to provide a view into the past of Vancouver Washington"
 		/>
+		<meta name="robots" content="index, follow" />
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+		<meta name="language" content="English" />
+		<meta name="revisit-after" content="14 days" />
+		<meta name="author" content="https://www.nicholasbydesign.com" />
 		<meta
 			name="keywords"
 			content="Vancouver, Washington, Clark County, South West Washington, Vancouver Washington, History, Photography"
