--- a/index.html
+++ b/index.html
@@ -136,6 +136,12 @@
 			</div>
 		</header>
 		<section id="map" data-map></section>
+		<div class="viewer" data-viewer>
+			<div class="viwer__media" data-viwer-body></div>
+			<div class="viwer__container container container--padding">
+				<h4 data-viwer-title></h4>
+			</div>
+		</div>
 		<div class="modal" data-modal>
 			<div class="modal__header">
 				<div class="container container--padding">
