--- a/index.html
+++ b/index.html
@@ -138,9 +138,9 @@
 		</header>
 		<section id="map" data-map></section>
 		<div class="viewer" data-viewer>
-			<div class="viwer__media" data-viwer-media></div>
+			<div class="viewer__media" data-viewer-media></div>
 			<div class="swiper">
-				<div class="swiper-wrapper viwer__media" data-viwer-media></div>
+				<div class="swiper-wrapper viewer__media" data-viewer-media></div>
 				<div class="swiper-scrollbar"></div>
 			</div>
 		</div>
