Add loading message

--- a/index.html
+++ b/index.html
@@ -139,7 +139,13 @@
 		<section id="map" data-map></section>
 		<div class="viewer" data-viewer>
 			<div class="swiper">
-				<div class="swiper-wrapper viewer__media" data-viewer-media></div>
+				<div class="swiper-wrapper viewer__media" data-viewer-media>
+					<div class="viewer__media-loading">
+						<h1>Vancouver's History Mapped</h1>
+						<hr />
+						<p>Hold on, looking for locations near you!</p>
+					</div>
+				</div>
 				<div class="swiper-scrollbar"></div>
 			</div>
 		</div>
