--- a/index.html
+++ b/index.html
@@ -32,118 +32,33 @@
 	<body>
 		<header>
 			<div class="container container--padding">
-				<div class="tower">
-					<svg viewBox="0 0 271 387">
-						<g transform="matrix(1,0,0,1,-516.191,-142.724)">
-							<path
-								d="M577.053,529.187L576.744,333.468L773.158,337.481L773.309,529.541L577.053,529.187Z"
-								style="fill: none; stroke-width: 3px"
-							/>
-							<rect
-								x="588.288"
-								y="448.17"
-								width="45.38"
-								height="80.993"
-								style="fill: none; stroke-width: 3px"
-							/>
-							<g transform="matrix(0.611392,0,0,0.611392,312.808,194.018)">
-								<circle cx="514.044" cy="492.038" r="2.453" style="fill: none; stroke-width: 2px" />
-							</g>
-							<g transform="matrix(0.523873,0,0,1.04219,279.963,-14.6222)">
-								<path
-									d="M587.931,346.576L763.002,347.215L763.022,521.87L588.001,521.903L587.931,346.576Z"
-									style="fill: none; stroke-width: 5px"
-								/>
-							</g>
-							<path
-								d="M542.209,341.842L576.946,333.439L577.117,529.204L541.95,521.957L542.209,341.842Z"
-								style="fill: none; stroke-width: 3px"
-							/>
-							<path
-								d="M685.774,219.94L577.637,219.574L654.431,143.108L685.774,219.94Z"
-								style="fill: none; stroke-width: 3px"
-							/>
-							<path d="M686.101,324.455L685.774,219.94" style="fill: none; stroke-width: 3px" />
-							<path
-								d="M516.595,227.227L654.278,142.908L577.664,219.634L516.595,227.227"
-								style="fill: none; stroke-width: 3px"
-							/>
-							<path
-								d="M773.269,224.845L685.892,219.876L654.488,143.034L773.269,224.845Z"
-								style="fill: none; stroke-width: 3px"
-							/>
-							<path
-								d="M516.911,227.05L521.86,231.273L576.74,224.487L685.866,225.744L772.901,228.786L773.232,224.967L687.796,219.864L577.87,219.618L516.911,227.05Z"
-								style="fill: none; stroke-width: 3px"
-							/>
-							<path
-								d="M773.269,344.499L783.324,342.233L773.135,337.441L773.269,344.499Z"
-								style="fill: none; stroke-width: 3px"
-							/>
-							<path
-								d="M542.906,341.682L517.713,337.119L543.711,334.91L575.966,333.411L542.906,341.682Z"
-								style="fill: none; stroke-width: 2px"
-							/>
-							<path
-								d="M517.053,327.97L544.003,325.433L575.299,322.998L679.077,324.409L763.776,326.322L786.424,333.814L786.424,341.824L783.522,342.183L772.815,337.397L576.692,333.314L543.854,334.97L529.527,336.103L517.638,337.012L517.053,327.97Z"
-								style="fill: none; stroke-width: 3px"
-							/>
-							<path
-								d="M521.653,327.328L522.067,231.503L577.369,224.812L577.223,322.959L521.653,327.328Z"
-								style="fill: none; stroke-width: 3px"
-							/>
-							<path
-								d="M679.285,324.383L679.327,231.349L587.955,230.471L587.875,323.017L679.285,324.383Z"
-								style="fill: none; stroke-width: 3px"
-							/>
-							<path
-								d="M763.217,326.271L763.074,233.253L691.243,231.183L690.591,324.427L763.217,326.271Z"
-								style="fill: none; stroke-width: 3px"
-							/>
-							<path
-								d="M785.287,333.263L786.436,236.677L773.09,228.791L773.131,329.276L785.287,333.263Z"
-								style="fill: none; stroke-width: 5px"
-							/>
-							<g transform="matrix(6.55318,0,0,0.990412,-3704.21,4.2844)">
-								<path
-									d="M670.608,345.924L670.784,529.946L681.749,530.049L681.712,346.066L670.608,345.924Z"
-									style="fill: none; stroke-width: 0.5px"
-								/>
-							</g>
-							<path
-								d="M541.542,325.646L541.91,285.95L557.886,279.722L557.352,324.391L541.542,325.646Z"
-								style="fill: none; stroke-width: 3px"
-							/>
-							<path
-								d="M616.037,323.279L615.909,279.63L647.797,279.588L647.144,323.598L616.037,323.279Z"
-								style="fill: none; stroke-width: 3px"
-							/>
-							<path
-								d="M776.127,330.178L776.337,279.557L781.493,285.789L781.557,332.043L776.127,330.178Z"
-								style="fill: none; stroke-width: 1px"
-							/>
-							<path
-								d="M717.276,325.192L716.916,279.372L741.194,279.612L741.634,325.829L717.276,325.192Z"
-								style="fill: none; stroke-width: 2px"
-							/>
-							<path
-								d="M773.26,224.787L772.938,228.536L786.445,236.374L786.787,232.143L773.26,224.787Z"
-								style="fill: none; stroke-width: 0.5px"
-							/>
-						</g>
-					</svg>
-				</div>
 				<h1>Vancouver's History Mapped</h1>
 			</div>
 		</header>
 		<section id="map" data-map></section>
 		<div class="viewer" data-viewer>
+			<button class="btn btn--round btn__expand" onclick="expand(event)">
+				<svg viewBox="0 0 20 20">
+					<path
+						fill="#555"
+						d="M9.16274989,10.7621754 C9.4384197,11.03322 9.44216913,11.4764196 9.17112449,11.7520894 L2.43398031,18.6058592 L6.7,18.6048592 C7.08659932,18.6048592 7.4,18.9182599 7.4,19.3048592 C7.4,19.6914586 7.08659932,20.0048592 6.7,20.0048592 L0.7,20.0048592 C0.313400675,20.0048592 3.01980663e-14,19.6914586 3.01980663e-14,19.3048592 L3.01980663e-14,13.3048592 C3.01980663e-14,12.9182599 0.313400675,12.6048592 0.7,12.6048592 C1.08659932,12.6048592 1.4,12.9182599 1.4,13.3048592 L1.40098031,17.6588592 L8.17283582,10.77055 C8.44388047,10.4948802 8.88708009,10.4911307 9.16274989,10.7621754 Z M19.3018964,0 C19.6884957,0 20.0018964,0.313400675 20.0018964,0.7 L20.0018964,6.7 C20.0018964,7.08659932 19.6884957,7.4 19.3018964,7.4 C18.9152971,7.4 18.6018964,7.08659932 18.6018964,6.7 L18.6009161,2.346 L11.8290606,9.23430929 C11.5580159,9.50997909 11.1148163,9.51372852 10.8391465,9.24268388 C10.5634767,8.97163924 10.5597273,8.52843961 10.8307719,8.25276981 L17.5679161,1.399 L13.3018964,1.4 C12.9152971,1.4 12.6018964,1.08659932 12.6018964,0.7 C12.6018964,0.313400675 12.9152971,0 13.3018964,0 L19.3018964,0 Z"
+					/>
+				</svg>
+			</button>
+			<button class="btn btn--round btn--active btn__shrink" onclick="shrink(event)">
+				<svg viewBox="0 0 20 20">
+					<path
+						fill="#555"
+						d="M8.67198031,10.5613195 C9.05857964,10.5613195 9.37198031,10.8747202 9.37198031,11.2613195 L9.37198031,17.2613195 C9.37198031,17.6479189 9.05857964,17.9613195 8.67198031,17.9613195 C8.28538099,17.9613195 7.97198031,17.6479189 7.97198031,17.2613195 L7.971,12.9073195 L1.19914449,19.7956288 C0.928099848,20.0712986 0.484900222,20.0750481 0.20923042,19.8040034 C-0.0664393831,19.5329588 -0.0701888169,19.0897591 0.200855825,18.8140893 L6.938,11.9603195 L2.67198031,11.9613195 C2.28538099,11.9613195 1.97198031,11.6479189 1.97198031,11.2613195 C1.97198031,10.8747202 2.28538099,10.5613195 2.67198031,10.5613195 L8.67198031,10.5613195 Z M19.792666,0.200855825 C20.0683358,0.471900467 20.0720852,0.915100092 19.8010406,1.19076989 L13.0638964,8.04453971 L17.3299161,8.04353971 C17.7165154,8.04353971 18.0299161,8.35694038 18.0299161,8.74353971 C18.0299161,9.13013903 17.7165154,9.44353971 17.3299161,9.44353971 L11.3299161,9.44353971 C10.9433167,9.44353971 10.6299161,9.13013903 10.6299161,8.74353971 L10.6299161,2.74353971 C10.6299161,2.35694038 10.9433167,2.04353971 11.3299161,2.04353971 C11.7165154,2.04353971 12.0299161,2.35694038 12.0299161,2.74353971 L12.0308964,7.09753971 L18.8027519,0.20923042 C19.0737965,-0.0664393831 19.5169962,-0.0701888169 19.792666,0.200855825 Z"
+					/>
+				</svg>
+			</button>
 			<div class="swiper">
 				<div class="swiper-wrapper viewer__media" data-viewer-media>
 					<div class="viewer__media-loading">
 						<h1>Vancouver's History Mapped</h1>
 						<hr />
-						<p>Hold on, looking for locations near you!</p>
+						<p>Hold on, looking for history near you!</p>
 					</div>
 				</div>
 				<div class="swiper-scrollbar"></div>
